// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateField /> should render nothing with missing field 1`] = `null`;

exports[`<DateField /> should render value 1`] = `
<Text>
  xxx
</Text>
`;

exports[`<DateField /> should render value using render function 1`] = `
<View>
  <Text>
    Test test test...
  </Text>
  <Text>
    Thu Oct 23 2003
  </Text>
</View>
`;
